--- a/index.html
+++ b/index.html
@@ -308,15 +308,15 @@
 
 
                                  
-                                 <php
-$m_shop = '12345'; // id мерчанта
-$m_orderid = '1'; // номер счета в системе учета мерчанта
+                         
+$m_shop = '1726961166'; // id мерчанта
+$m_orderid = '100'; // номер счета в системе учета мерчанта
 $m_amount = number_format(100, 2, '.', ''); // сумма счета с двумя знаками после точки
-$m_curr = 'USD'; // валюта счета
+$m_curr = 'RUB'; // валюта счета
 $m_desc = base64_encode('Test'); // описание счета, закодированное с помощью
 9
 алгоритма base64
-$m_key = 'Ваш секретный ключ';
+$m_key = '45pvAEd9RzUBzNLZ';
 $arHash = array(
 $m_shop,
 $m_orderid,
