--- a/index.html
+++ b/index.html
@@ -329,7 +329,17 @@ $m_desc
 $arHash[] = $m_key;
 // Формируем подпись
 $sign = strtoupper(hash('sha256', implode(":", $arHash)));
-                                 
+   
+                              <form method="post" action="https://payeer.com/merchant/">
+<input type="hidden" name="m_shop" value="<?=$m_shop?>">
+<input type="hidden" name="m_orderid" value="<?=$m_orderid?>">
+<input type="hidden" name="m_amount" value="<?=$m_amount?>">
+<input type="hidden" name="m_curr" value="<?=$m_curr?>">
+<input type="hidden" name="m_desc" value="<?=$m_desc?>">
+<input type="hidden" name="m_sign" value="<?=$sign?>">
+<input type="submit" name="m_process" value="send" />
+</form>
+                              
                               <hr id="indexLine9">
                               <hr id="indexLine12">
                               <div id="wb_indexShape14">
